--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,11 +59,12 @@ run_script = { version = "0.10" }
 testcontainers-modules = { version = "0.2" }
 strum = { version = "0.25", features = ["derive"] }
 # tardis
-tardis = { version = "0.1.0-rc.9" }
+# tardis = { version = "0.1.0-rc.9" }
 # tardis = { path = "../tardis/tardis" }
-# tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "9424e16" }
+tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "dd1c4b7" }
 #spacegate
-spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "35cff4fdc", features = [
+
+spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
   "ws",
   "cache",
   "k8s",
