--- a/services/spacegate/Cargo.toml
+++ b/services/spacegate/Cargo.toml
@@ -18,7 +18,7 @@ lazy_static.workspace = true
 spacegate-shell.workspace = true
 tardis.workspace = true
 spacegate-lib = { path = "../../gateway/spacegate-lib" }
-
+envy = "0.4"
 [dev-dependencies]
 pprof = { version = "0.12.1", features = ["flamegraph"] }
 tardis = { workspace = true, features = ["test", "web-client"] }
