--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ strum = { version = "0.25", features = ["derive"] }
 # tardis
 # tardis = { version = "0.1.0-rc.9" }
 # tardis = { path = "../tardis/tardis" }
-tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "059f4c" }
+tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "0b1d60f" }
 #spacegate
 
 # spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
@@ -69,8 +69,13 @@ tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "059f4c" }
 #   "cache",
 #   "k8s",
 # ] }
-spacegate-shell = { path = "../spacegate/shell",features = [
-   "ws",
-   "cache",
-   "k8s",
+# spacegate-shell = { path = "../spacegate/shell", features = [
+#   "ws",
+#   "cache",
+#   "k8s",
+# ] }
+spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", branch = "v2", features = [
+  "ws",
+  "cache",
+  "k8s",
 ] }
