--- a/middleware/flow/Cargo.toml
+++ b/middleware/flow/Cargo.toml
@@ -22,7 +22,7 @@ async-trait.workspace = true
 async-recursion.workspace = true
 lazy_static.workspace = true
 itertools.workspace = true
-tardis = { workspace = true, features = ["reldb-postgres", "web-client"] }
+tardis = { workspace = true, features = ["reldb-postgres", "web-client", "build-info"] }
 bios-basic = { path = "../../basic", features = ["default"] }
 bios-sdk-invoke = { path = "../../sdk/invoke", features = ["default"] }
 [dev-dependencies]
