--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ strum = { version = "0.25", features = ["derive"] }
 # tardis
 # tardis = { version = "0.1.0-rc.9" }
 # tardis = { path = "../tardis/tardis" }
-tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "0b1d60f" }
+tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "8d37621" }
 #spacegate
 
 # spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
@@ -74,7 +74,7 @@ tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "0b1d60f" }
 #   "cache",
 #   "k8s",
 # ] }
-spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", branch = "v2", features = [
+spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", branch = "master", features = [
   "ws",
   "cache",
   "k8s",
