--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,12 +56,12 @@ lazy_static = { version = "1" }
 itertools = { version = "0" }
 fancy-regex = { version = "0" }
 run_script = { version = "0.10" }
-testcontainers-modules = { version = "0.2" }
+testcontainers-modules = { version = "0.3", features = ["redis"] }
 strum = { version = "0.25", features = ["derive"] }
 # tardis
 # tardis = { version = "0.1.0-rc.9" }
 # tardis = { path = "../tardis/tardis" }
-tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "0b1d60f" }
+tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "8d37621" }
 #spacegate
 
 spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
