--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ strum = { version = "0.25", features = ["derive"] }
 # tardis
 # tardis = { version = "0.1.0-rc.9" }
 # tardis = { path = "../tardis/tardis" }
-tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "8d37621" }
+tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "aa8931b" }
 #spacegate
 
 # spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
@@ -69,13 +69,13 @@ tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "8d37621" }
 #   "cache",
 #   "k8s",
 # ] }
-# spacegate-shell = { path = "../spacegate/shell", features = [
+spacegate-shell = { path = "../spacegate/shell", features = [
+  "cache",
+  "k8s",
+  "ext-redis",
+] }
+# spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", branch = "master", features = [
 #   "ws",
 #   "cache",
 #   "k8s",
 # ] }
-spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", branch = "master", features = [
-  "ws",
-  "cache",
-  "k8s",
-] }
