--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,13 +64,18 @@ strum = { version = "0.25", features = ["derive"] }
 tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "aa8931b" }
 #spacegate
 
-spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
-  "ws",
+# spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
+#   "ws",
+#   "cache",
+#   "k8s",
+# ] }
+# spacegate-shell = { path = "../spacegate/shell", features = [
+#   "cache",
+#   "k8s",
+#   "ext-redis",
+# ] }
+spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", branch = "master",  features = [
   "cache",
   "k8s",
+  "ext-redis",
 ] }
-#spacegate-kernel = { path = "../spacegate/kernel",features = [
-#    "ws",
-#    "cache",
-#    "k8s",
-#] }
