Replace localhost with 127.0.0.1 to fix wsl2 ``networkingMode=mirrored`` inaccessibility issue.

--- a/gateway/test/conf/apisix/Dockerfile_with_etcd
+++ b/gateway/test/conf/apisix/Dockerfile_with_etcd
@@ -24,6 +24,6 @@ VOLUME /etcd_data
 
 EXPOSE 9080 9443 2379 2380
 
-CMD ["sh", "-c", "(nohup etcd --data-dir=/etcd_data --listen-client-urls=http://0.0.0.0:2379 --advertise-client-urls=http://localhost:2379 >/tmp/etcd.log 2>&1 &) && sleep 10 && /usr/bin/apisix init && /usr/bin/apisix init_etcd && /usr/local/openresty/bin/openresty -p /usr/local/apisix -g 'daemon off;'"]
+CMD ["sh", "-c", "(nohup etcd --data-dir=/etcd_data --listen-client-urls=http://0.0.0.0:2379 --advertise-client-urls=http://127.0.0.1:2379 >/tmp/etcd.log 2>&1 &) && sleep 10 && /usr/bin/apisix init && /usr/bin/apisix init_etcd && /usr/local/openresty/bin/openresty -p /usr/local/apisix -g 'daemon off;'"]
 
 STOPSIGNAL SIGQUIT
