--- a/middleware/schedule/tests/config/conf-default.toml
+++ b/middleware/schedule/tests/config/conf-default.toml
@@ -66,7 +66,7 @@ FZygs8miAhWPzqnpmgTj1cPiU1M=
 """
 [fw.web_server.modules.spi-schedule]
 title = "schedule服务"
-doc_urls = [["test env", "http://localhost:8080/"]]
+doc_urls = [["test env", "http://127.0.0.1:8080/"]]
 [fw.web_server.modules.spi-kv]
 [fw.web_server.modules.spi-log]
 [fw.web_server.modules.schedule]
