--- a/services/bios-all/config/conf-default.toml
+++ b/services/bios-all/config/conf-default.toml
@@ -33,10 +33,10 @@ default_lang = "zh-cn"
 port = 8080
 [fw.web_server.modules.iam]
 title = "IAM Component"
-doc_urls = [["test env", "http://localhost:8080/"]]
+doc_urls = [["test env", "http://127.0.0.1:8080/"]]
 
 [fw.db]
-url = "mysql://root:ENC(5892ae51dbeedacdf10ba4c0d7af42a7)@localhost:3306/test"
+url = "mysql://root:ENC(5892ae51dbeedacdf10ba4c0d7af42a7)@127.0.0.1:3306/test"
 
 [fw.cache]
 url = "redis://:ENC(5892ae51dbeedacdf10ba4c0d7af42a7)@127.0.0.1:6379"
