--- a/spi/spi-cache/tests/config/conf-default.toml
+++ b/spi/spi-cache/tests/config/conf-default.toml
@@ -59,4 +59,4 @@ FZygs8miAhWPzqnpmgTj1cPiU1M=
 """
 [fw.web_server.modules.spi-cache]
 title = "缓存存储服务"
-doc_urls = [["test env", "http://localhost:8080/"]]
+doc_urls = [["test env", "http://127.0.0.1:8080/"]]
