--- a/spi/spi-conf/tests/config/conf-default.toml
+++ b/spi/spi-conf/tests/config/conf-default.toml
@@ -60,7 +60,7 @@ tCVeOl3bWPk2TUtKWlVKeiThSqCrgSB0msQ06niVFCKokC4=
 """
 [fw.web_server.modules.spi-conf]
 title = "配置服务"
-doc_urls = [["test env", "http://localhost:8080/"]]
+doc_urls = [["test env", "http://127.0.0.1:8080/"]]
 uniform_error = false
 [fw.web_server.modules.spi-conf-nacos]
 
