--- a/spi/spi-conf/tests/config/conf-nacos.toml
+++ b/spi/spi-conf/tests/config/conf-nacos.toml
@@ -10,9 +10,8 @@ enabled = true
 port = 8080
 [fw.web_server.modules.spi-conf]
 title = "配置服务"
-doc_urls = [["test env", "http://localhost:8080/"]]
+doc_urls = [["test env", "http://127.0.0.1:8080/"]]
 uniform_error = true
 [fw.web_server.modules.spi-conf-nacos]
 title = "配置nacos服务"
 uniform_error = false
-
