--- a/spi/spi-search/tests/config/conf-default.toml
+++ b/spi/spi-search/tests/config/conf-default.toml
@@ -1,7 +1,7 @@
 [cs]
 
 [csm.spi-search]
-word_length=30
+word_length = 30
 
 [fw.web_server]
 port = 8080
@@ -62,4 +62,4 @@ FZygs8miAhWPzqnpmgTj1cPiU1M=
 """
 [fw.web_server.modules.spi-search]
 title = "搜索服务"
-doc_urls = [["test env", "http://localhost:8080/"]]
+doc_urls = [["test env", "http://127.0.0.1:8080/"]]
