--- a/support/auth/tests/config/conf-default.toml
+++ b/support/auth/tests/config/conf-default.toml
@@ -60,4 +60,4 @@ FZygs8miAhWPzqnpmgTj1cPiU1M=
 """
 [fw.web_server.modules.auth]
 title = "认证服务"
-doc_urls = [["test env", "http://localhost:8080/"]]
+doc_urls = [["test env", "http://127.0.0.1:8080/"]]
