Add recommended plugin list.

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,3 @@
-# Gateway
-/core/gateway/apisix/*
-/core/gateway/etcd
-/core/gateway/default.etcd
-/core/gateway/build.log
-
-!/core/gateway/apisix/t
-/core/gateway/apisix/t/*
-!/core/gateway/apisix/t/plugin/auth-bios
-!/core/gateway/apisix/t/certs
-!/core/gateway/apisix/t/error_page
-!/core/gateway/apisix/t/APISIX.pm
-
-!/core/gateway/apisix/conf
-/core/gateway/apisix/conf/*
-!/core/gateway/apisix/conf/config-default.yaml
-!/core/gateway/apisix/conf/config.yaml
-
-!/core/gateway/apisix/apisix
-/core/gateway/apisix/apisix/*
-!/core/gateway/apisix/apisix/plugins
-/core/gateway/apisix/apisix/plugins/*
-!/core/gateway/apisix/apisix/plugins/auth-bios
-!/core/gateway/apisix/apisix/plugins/auth-bios.lua
-
-
 *-prod.toml
 *-prod.yaml
 # CI
@@ -49,8 +23,9 @@ node_modules
 
 # IDE
 *.iml
-.vscode
 .idea
+.vscode/*
+!/.vscode/extensions.json
 /.history/
 
 #macos
