--- a/gateway/spacegate-lib/Cargo.toml
+++ b/gateway/spacegate-lib/Cargo.toml
@@ -22,7 +22,7 @@ bios-sdk-invoke = { path = "../../sdk/invoke", features = ["spi_log"] }
 
 jsonpath-rust = "0.3.1"
 bios-auth = { path = "../../support/auth", default-features = false }
-tardis = { workspace = true, features = ["web-client", "build-info"] }
+tardis = { workspace = true, features = ["web-client"] }
 ipnet = "2.8.0"
 
 http = { version = "1" }
@@ -32,4 +32,4 @@ pprof = { version = "0.12.1", features = ["flamegraph"] }
 tardis = { workspace = true, features = ["test", "web-client"] }
 
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-testcontainers-modules = { workspace = true,features = ["redis"] }
+testcontainers-modules = { workspace = true, features = ["redis"] }
