remove opres plugins

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,9 +59,9 @@ run_script = { version = "0.10" }
 testcontainers-modules = { version = "0.3", features = ["redis"] }
 strum = { version = "0.26", features = ["derive"] }
 # tardis
-tardis = { version = "0.1.0-rc.10" }
+# tardis = { version = "0.1.0-rc.10" }
 # tardis = { path = "../tardis/tardis" }
-# tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "6312e3305c322d48b084e14c23a8de2a879a738a" }
+tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "191f3ec" }
 #spacegate
 
 # spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
