--- a/.github/workflows/space-gateway-docker-release.yml
+++ b/.github/workflows/space-gateway-docker-release.yml
@@ -36,7 +36,7 @@ jobs:
         run: cargo build --release -p bios-spacegate
 
       - name: Copy binary to workspace
-        run: cp ./target/release/bios-spacegate ./services/spacegate/
+        run: cp ./target/release/bios-spacegate ./backend/services/spacegate/
 
       - name: Build and push Docker image to github
         uses: mr-smithers-excellent/docker-build-push@v5
