--- a/backend/services/spacegate/Cargo.toml
+++ b/backend/services/spacegate/Cargo.toml
@@ -15,9 +15,15 @@ publish.workspace = true
 [dependencies]
 serde.workspace = true
 lazy_static.workspace = true
-spacegate-shell = { workspace = true, features = ["k8s", "plugin-all", "ext-redis", "ext-axum", "cache"] }
+spacegate-shell = { workspace = true, features = [
+  "k8s",
+  "plugin-all",
+  "ext-redis",
+  "ext-axum",
+  "cache",
+] }
 tardis = { workerspace = true }
-spacegate-lib = { path = "../../gateways/spacegate-lib" }
+spacegate-plugins = { path = "../../gateways/spacegate-plugins" }
 envy = "0.4"
 [dev-dependencies]
 pprof = { version = "0.13", features = ["flamegraph"] }
