--- a/backend/services/spacegate/Cargo.toml
+++ b/backend/services/spacegate/Cargo.toml
@@ -16,7 +16,7 @@ publish.workspace = true
 serde.workspace = true
 lazy_static.workspace = true
 spacegate-shell = { workspace = true, features = ["k8s", "plugin-all", "ext-redis", "ext-axum", "cache"] }
-tardis = { workerspace = true }
+tardis = { workspace = true }
 spacegate-lib = { path = "../../gateway/spacegate-lib" }
 envy = "0.4"
 [dev-dependencies]
