--- a/backend/services/bios-all/Cargo.toml
+++ b/backend/services/bios-all/Cargo.toml
@@ -13,9 +13,9 @@ publish.workspace = true
 [dependencies]
 serde.workspace = true
 tardis = { workspace = true, features = ["web-server", "conf-remote", "cluster", "k8s"] }
-bios-iam = { path = "../../support/iam", features = ["spi_search", "spi_kv"] }
-bios-auth = { path = "../../support/auth", features = ["web-server"] }
-bios-reach = { path = "../../support/reach" }
+bios-iam = { path = "../../supports/iam", features = ["spi_search", "spi_kv"] }
+bios-auth = { path = "../../supports/auth", features = ["web-server"] }
+bios-reach = { path = "../../supports/reach" }
 
 bios-spi-cache = { path = "../../spi/spi-cache" }
 bios-spi-graph = { path = "../../spi/spi-graph" }
