--- a/backend/services/spacegate/Cargo.toml
+++ b/backend/services/spacegate/Cargo.toml
@@ -17,7 +17,7 @@ serde.workspace = true
 lazy_static.workspace = true
 spacegate-shell = { workspace = true, features = ["k8s", "plugin-all", "ext-redis", "ext-axum", "cache"] }
 tardis = { workspace = true }
-spacegate-lib = { path = "../../gateway/spacegate-lib" }
+spacegate-lib = { path = "../../gateways/spacegate-lib" }
 envy = "0.4"
 [dev-dependencies]
 pprof = { version = "0.13", features = ["flamegraph"] }
