--- a/backend/spi/spi-plugin/Cargo.toml
+++ b/backend/spi/spi-plugin/Cargo.toml
@@ -23,7 +23,7 @@ serde.workspace = true
 async-trait.workspace = true
 tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
 bios-basic = { path = "../../basic", features = ["default"] }
-bios-sdk-invoke = { path = "../../../frontend/sdk/invoke", features = ["default"] }
+bios-sdk-invoke = { path = "../../../frontend/sdks/invoke", features = ["default"] }
 strum = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
