--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ members = [
   "frontend/sdks/*",
   "frontend/clients/*",
 ]
-
+resolver = "2"
 [workspace.package]
 version = "0.1.0"
 authors = [
@@ -61,9 +61,9 @@ run_script = { version = "0.10" }
 testcontainers-modules = { version = "0.3", features = ["redis"] }
 strum = { version = "0.26", features = ["derive"] }
 # tardis
-# tardis = { version = "0.1.0-rc.10" }
+tardis = { version = "0.1.0-rc.11" }
 # tardis = { path = "../tardis/tardis" }
-tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "191f3ec" }
+# tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "191f3ec" }
 #spacegate
 
 # spacegate-kernel = { git = "https://github.com/ideal-world/spacegate.git", rev = "f37a81a", features = [
@@ -81,7 +81,6 @@ spacegate-shell = { git = "https://github.com/ideal-world/spacegate.git", branch
   "cache",
   "k8s",
   "ext-redis",
-  "ext-axum",
 ] }
 
 spacegate-plugin = { git = "https://github.com/ideal-world/spacegate.git", branch = "master" }
