--- a/backend/middlewares/schedule/Cargo.toml
+++ b/backend/middlewares/schedule/Cargo.toml
@@ -32,7 +32,7 @@ git = "https://github.com/4t145/tokio-cron-scheduler.git"
 branch = "time-local"
 features = ["cron_local"]
 [dev-dependencies]
-tardis = { workspace = true, features = ["test", "ws-client", "build-info"] }
+tardis = { workspace = true, features = ["test", "ws-client"] }
 bios-basic = { path = "../../basic", features = ["default", "test"] }
 bios-spi-kv = { path = "../../spi/spi-kv" }
 bios-spi-log = { path = "../../spi/spi-log" }
