--- a/frontend/sdks/invoke/Cargo.toml
+++ b/frontend/sdks/invoke/Cargo.toml
@@ -41,4 +41,4 @@ simple-invoke-client-macro = { path = "../simple-invoke-client-macro" }
 
 [[test]]
 name = "test_macros"
-features = ["macro"]
+required-features = ["macro"]
