--- a/backend/services/spacegate/Cargo.toml
+++ b/backend/services/spacegate/Cargo.toml
@@ -18,7 +18,7 @@ lazy_static.workspace = true
 spacegate-shell = { workspace = true, features = [
   "k8s",
   "plugin-all",
-  "ext-redis",
+#  "ext-redis",
   "cache",
 ] }
 tardis = { workspace = true }
